# code-clinic

01-weather-statistics/: CMakeLists.txt  WeatherStatistics.cpp  WeatherStatistics.h  main.cpp
02-where-am-i/: .clang-format  CMakeLists.txt  main.cpp  vcpkg.json
03-eight-queens-problem/: Board.cpp  Board.h  CMakeLists.txt  Queen.h  main.cpp  vcpkg.json
04-musical-instrument/: .clang-format  CMakeLists.txt  main.cpp  sound.cpp  sound.h  vcpkg.json  window.cpp  window.h
